Add/implement Widget CRD endpoints
