# api/swagger.yaml
@@ -22,7 +22,13 @@ paths:
       operationId: livez
       responses:
         "200":
-          $ref: "#/components/responses/MessageResponse"
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: integer
         "500":
           $ref: "#/components/responses/InternalErrorResponse"
 
@@ -37,10 +43,95 @@ paths:
           $ref: "#/components/responses/MessageResponse"
         "500":
           $ref: "#/components/responses/InternalErrorResponse"
+          
+  /api/v1/widgets:
+    get:
+      tags: [Widget]
+      summary: All widget ids
+      description: Returns array of widget ids
+      operationId: listWidgets
+      responses:
+        "200":
+          $ref: "#/components/responses/MessageResponse"
+        "500":
+          $ref: "#/components/responses/InternalErrorResponse"
+    post:
+      tags: [Widget]
+      summary: Add widget
+      description: Stores the provided widget information
+      operationId: addWidget
+      requestBody:
+        description: Widget information
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/WidgetInput"
+      responses:
+        "200":
+          $ref: "#/components/responses/WidgetResponse"
+        "400":
+          $ref: "#/components/responses/BadRequestResponse"
+        "500":
+          $ref: "#/components/responses/InternalErrorResponse"
+
+  /api/v1/widgets/{widgetId}:
+    get:
+      tags: [Widget]
+      summary: Get widget
+      description: Returns widget information for the specified widget id
+      operationId: getWidget
+      parameters:
+        - $ref: "#/components/parameters/WidgetID"
+      responses:
+        "200":
+          $ref: "#/components/responses/WidgetResponse"
+        "400":
+          $ref: "#/components/responses/BadRequestResponse"
+        "404":
+          $ref: "#/components/responses/NotFoundResponse"
+        "500":
+          $ref: "#/components/responses/InternalErrorResponse"
+        
+    delete:
+      tags: [Widget]
+      summary: Delete widget
+      description: Removes widget information from storage
+      operationId: deleteWidget
+      parameters:
+        - $ref: "#/components/parameters/WidgetID"
+      responses:
+        "200":
+          $ref: "#/components/responses/WidgetResponse"
+        "400":
+          $ref: "#/components/responses/BadRequestResponse"
+        "404":
+          $ref: "#/components/responses/NotFoundResponse"
+        "500":
+          $ref: "#/components/responses/InternalErrorResponse"
+        
 
 components:
 
+  parameters:
+  
+    WidgetID:
+      in: path
+      name: widgetId
+      description: Id of the widget
+      required: true
+      schema:
+        type: string
+
+
   responses:
+  
+    WidgetResponse:
+      description: "widget (200)"
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/Widget"
   
     MessageResponse:
       description: "success (200)"
@@ -49,6 +140,20 @@ components:
           schema:
             $ref: "#/components/schemas/MessageResponse"
             
+    BadRequestResponse:
+      description: "bad request (400)"
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/ErrorResponse"
+
+    NotFoundResponse:
+      description: "not found (404)"
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/ErrorResponse"
+
     InternalErrorResponse:
       description: "internal server error (500)"
       content:
@@ -57,6 +162,37 @@ components:
             $ref: "#/components/schemas/ErrorResponse"
 
   schemas:
+  
+    WidgetInput:
+      type: object
+      required:
+        - name
+        - color
+      properties:
+        name:
+          description: Name of widget
+          type: string
+          example: Nifty Thingy
+        color:
+          description: Color of widget
+          type: string
+          enum: [red, blue, green]
+      
+  
+    Widget:
+      description: Widget information
+      allOf:     # Combines the WidgetInput with other widget metadata
+        - $ref: '#/components/schemas/WidgetInput'
+        - type: object
+      properties:
+        id:
+          description: ID is a unique identifier
+          type: string
+          format: uuid
+        lastUpdated:
+          description: LastUpdated is a timestamp of when the widget entry was last modified
+          type: string
+          format: date-time
 
     MessageResponse:
       description: MessageResponse contains a message
